--- a/style.css
+++ b/style.css
@@ -18,3 +18,8 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+#client{
+	background: url('images/00006.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
