--- a/style.css
+++ b/style.css
@@ -23,3 +23,8 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+#compleated{
+	background: url('images/00007.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
